# aicrawler

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_content_and_digests.py
app/: config.py  database.py  deps.py  main.py
app/api/v1/: __init__.py  articles.py  auth.py  digests.py  pipeline.py
app/clients/: claude.py  perplexity.py
app/models/: __init__.py  article.py  content.py  digest.py  query_log.py  reading_list.py  search_job.py  tag.py  user.py
app/routes/: admin.py  articles.py  auth.py  dashboard.py  digests.py  interrogation.py  reading_lists.py  search_jobs.py
app/scheduler/: jobs.py  setup.py  tasks.py
app/schemas/: article.py  content.py  interrogation.py  search_job.py
app/services/: dedup.py  digest.py  discovery.py  enrichment.py  fetching.py  interrogation.py  reading_time.py
app/static/: style.css
app/templates/: 404.html  base.html  dashboard.html  login.html
app/templates/admin/: dashboard.html
app/templates/articles/: add.html  detail.html  list.html
app/templates/digests/: create.html  detail.html  list.html
app/templates/interrogation/: history.html  query.html  result.html
app/templates/reading_lists/: detail.html  list.html
app/templates/search_jobs/: add.html  history.html  list.html
scripts/: create_user.py  seed_search_jobs.py
tests/: conftest.py  test_dedup.py  test_reading_time.py  test_routes.py
