[project]
name = "aicrawler"
version = "0.1.0"
description = "AI Policy Research Knowledge Base"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "anthropic>=0.43",
    "openai>=1.60",
    "apscheduler>=3.10,<4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
    "httpx>=0.28",
    "trafilatura>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
